--- a/docs.html
+++ b/docs.html
@@ -9609,7 +9609,7 @@ This endpoint also accepts embedded variants.</p>
 <tr>
 <td><strong>weight_unit</strong></td>
 <td>String</td>
-<td>The weight unit (kg, gm, oz or lb)</td>
+<td>The weight unit (kg, g, oz or lb)</td>
 <td></td>
 </tr>
 <tr>
@@ -13232,7 +13232,7 @@ https://api.tradegecko.com/users/1
 <tr>
 <td><strong>weight_unit</strong></td>
 <td>String</td>
-<td>The weight unit (kg, gm, oz or lb)</td>
+<td>The weight unit (kg, g, oz or lb)</td>
 <td></td>
 </tr>
 <tr>
@@ -13751,7 +13751,7 @@ https://api.tradegecko.com/variants/ -d <span class="s1">&#39;{&quot;variant&quo
 <tr>
 <td><strong>weight_unit</strong></td>
 <td>String</td>
-<td>The weight unit (kg, gm, oz or lb)</td>
+<td>The weight unit (kg, g, oz or lb)</td>
 <td></td>
 </tr>
 <tr>
