publish: Add new line item status filters to the api
generated from commit 1bffc5bd4c1521566e5081e0a0e3f6cb57c2cb2a

--- a/changes.html
+++ b/changes.html
@@ -229,13 +229,15 @@
 
 <p>If anything is missing or seems incorrect, please check the <a href="https://github.com/tradegecko/smaug/issues">GitHub issues</a>
 for existing known issues or <a href="https://github.com/tradegecko/smaug/issues/new">create a new issue</a>.</p>
-<h2 id='changelog'>Changelog</h2><h3 id='apr-2019-pagination-tidying'>Apr 2019 - Pagination tidying</h3>
+<h2 id='changelog'>Changelog</h2><h3 id='apr-2019-pagination-cleanup-amp-line-item-filters'>Apr 2019 - Pagination Cleanup &amp; Line Item Filters</h3>
 <p>In order to provide a great experience to all our API users we&#39;ve made some changes to our pagination.
 The default page size is now 50 items (down from 100), with a max page size up to 250.</p>
 
 <p>The max page size for new integrations has been 250 for several years, but we have a
 few grandfathered integrations that supported a page size of up to 999.
 Over the next few weeks we will be contacting and migrating everyone to a 250 item max.</p>
+
+<p>OrderLineItem and PurchaseOrderLineItem index endpoints now support an <code>order_status</code> and <code>purchase_order_status</code> filter respectively.</p>
 <h3 id='oct-2018-enable-sideloading-add-webhooks-and-resource-actions'>Oct 2018 - Enable Sideloading, Add Webhooks and Resource Actions</h3>
 <p>We now support <a href="docs.html#sideloading-resources">sideloading of resources</a>.
 We have also added support for <a href="docs.html#webhook">webhooks</a>
