publish: Merge pull request #70 from tradegecko/webhooks
generated from commit 1211bd559daac1892b14708b87cade33ab1ca7a9

--- a/changes.html
+++ b/changes.html
@@ -237,6 +237,8 @@ The default page size is now 50 items (down from 100), with a max page size up t
 few grandfathered integrations that supported a page size of up to 999.
 Over the next few weeks we will be contacting and migrating everyone to a 250 item max.</p>
 
+<p>Added a Webhooks section to the documentation.</p>
+
 <p>OrderLineItem and PurchaseOrderLineItem index endpoints now support an <code>order_status</code> and <code>purchase_order_status</code> filter respectively.</p>
 <h3 id='oct-2018-enable-sideloading-add-webhooks-and-resource-actions'>Oct 2018 - Enable Sideloading, Add Webhooks and Resource Actions</h3>
 <p>We now support <a href="docs.html#sideloading-resources">sideloading of resources</a>.
