publish: Merge pull request #73 from tradegecko/feature/void-sa
generated from commit 7f4b741d618d8e37e72d4e1cb559c3df1f4fc931

--- a/docs.html
+++ b/docs.html
@@ -767,7 +767,7 @@
                     <a href="#retrieve-a-particular-stock_adjustment" class="toc-h2 toc-link" data-title="Retrieve a particular stock_adjustment">Retrieve a particular stock_adjustment</a>
                   </li>
                   <li>
-                    <a href="#stock-adjustment-actions" class="toc-h2 toc-link" data-title="Stock Adjustment actions">Stock Adjustment actions</a>
+                    <a href="#delete-a-stock_adjustment" class="toc-h2 toc-link" data-title="Delete a stock_adjustment">Delete a stock_adjustment</a>
                   </li>
               </ul>
           </li>
@@ -785,9 +785,6 @@
                   </li>
                   <li>
                     <a href="#retrieve-a-particular-stock_adjustment_line_item" class="toc-h2 toc-link" data-title="Retrieve a particular stock_adjustment_line_item">Retrieve a particular stock_adjustment_line_item</a>
-                  </li>
-                  <li>
-                    <a href="#delete-a-stock_adjustment_line_item" class="toc-h2 toc-link" data-title="Delete a stock_adjustment_line_item">Delete a stock_adjustment_line_item</a>
                   </li>
               </ul>
           </li>
@@ -2537,7 +2534,8 @@ https://api.tradegecko.com/addresses/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes an address. It cannot be undone. This address is no longer available for future Sales Orders.</p>
+<p>Permanently deletes an address. It cannot be undone.
+  This address will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -3173,7 +3171,8 @@ https://api.tradegecko.com/companies/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a company. It cannot be undone. This company is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a company. It cannot be undone.
+  This company will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -3602,7 +3601,8 @@ https://api.tradegecko.com/contacts/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a contact. It cannot be undone. This contact is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a contact. It cannot be undone.
+  This contact will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -3953,7 +3953,8 @@ https://api.tradegecko.com/currencies/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a currency. It cannot be undone. This currency is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a currency. It cannot be undone.
+  This currency will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -4494,7 +4495,7 @@ https://api.tradegecko.com/fulfillments/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a fulfillment. It cannot be undone. This fulfillment is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a fulfillment. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -4833,7 +4834,7 @@ https://api.tradegecko.com/fulfillment_line_items/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a fulfillment_line_item. It cannot be undone. This fulfillment_line_item is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a fulfillment_line_item. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -5271,7 +5272,7 @@ https://api.tradegecko.com/fulfillment_returns/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a fulfillment_return. It cannot be undone. This fulfillment_return is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a fulfillment_return. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -5584,7 +5585,7 @@ https://api.tradegecko.com/fulfillment_return_line_items/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a fulfillment_return_line_item. It cannot be undone. This fulfillment_return_line_item is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a fulfillment_return_line_item. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -5910,7 +5911,7 @@ https://api.tradegecko.com/images/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes an image. It cannot be undone. This image is no longer available for future Sales Orders.</p>
+<p>Permanently deletes an image. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -6425,7 +6426,7 @@ https://api.tradegecko.com/invoices/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes an invoice. It cannot be undone. This invoice is no longer available for future Sales Orders.</p>
+<p>Permanently deletes an invoice. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -6730,7 +6731,7 @@ https://api.tradegecko.com/invoice_line_items/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes an invoice_line_item. It cannot be undone. This invoice_line_item is no longer available for future Sales Orders.</p>
+<p>Permanently deletes an invoice_line_item. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -7093,7 +7094,8 @@ https://api.tradegecko.com/locations/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a location. It cannot be undone. This location is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a location. It cannot be undone.
+  This location will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -7350,7 +7352,7 @@ https://api.tradegecko.com/notes/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a note. It cannot be undone. This note is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a note. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -8362,7 +8364,7 @@ https://api.tradegecko.com/orders/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes an order. It cannot be undone. This order is no longer available for future Sales Orders.</p>
+<p>Permanently deletes an order. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -8845,7 +8847,7 @@ https://api.tradegecko.com/order_line_items/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes an order_line_item. It cannot be undone. This order_line_item is no longer available for future Sales Orders.</p>
+<p>Permanently deletes an order_line_item. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -9099,7 +9101,8 @@ https://api.tradegecko.com/payment_terms/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a payment_term. It cannot be undone. This payment_term is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a payment_term. It cannot be undone.
+  This payment_term will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -9780,7 +9783,7 @@ https://api.tradegecko.com/products/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a product. It cannot be undone. This product is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a product. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -10526,7 +10529,7 @@ https://api.tradegecko.com/purchase_orders/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a purchase_order. It cannot be undone. This purchase_order is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a purchase_order. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -10994,7 +10997,7 @@ https://api.tradegecko.com/purchase_order_line_items/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a purchase_order_line_item. It cannot be undone. This purchase_order_line_item is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a purchase_order_line_item. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -11270,7 +11273,7 @@ This endpoint also accepts embedded stock_adjustment_line_items.</p>
 <tr>
 <td><strong>price</strong></td>
 <td>String</td>
-<td></td>
+<td>Required only when quantity is greater than 0. For negative quantities, the current Moving Average Cost will be assigned automatically.</td>
 <td>true</td>
 </tr>
 </tbody></table>
@@ -11305,30 +11308,29 @@ https://api.tradegecko.com/stock_adjustments/1
 
 <p><code>GET https://api.tradegecko.com/stock_adjustments/{RESOURCE_ID}</code></p></p>
 
-<p><h2 id='stock-adjustment-actions'>Stock Adjustment actions</h2>
-<p>Use the following endpoints to manage the reverting of the stock adjustment. <code>POST /stock_adjustments/[:stock_adjustment_id]/actions/[:action]</code></p>
-
-<pre class="highlight shell tab-shell"><code>curl -X POST -H <span class="s2">&quot;Content-type: application/json&quot;</span> -H <span class="s2">&quot;Authorization: Bearer &lt;ACCESS_TOKEN&gt;&quot;</span>
-https://api.tradegecko.com/stock_adjustments/[:stock_adjustment_id]/actions/[:stock_adjustment_action]
+<p><h2 id='delete-a-stock_adjustment'>Delete a stock_adjustment</h2><pre class="highlight shell tab-shell"><code>curl -X DELETE -H <span class="s2">&quot;Content-type: application/json&quot;</span> -H <span class="s2">&quot;Authorization: Bearer &lt;ACCESS_TOKEN&gt;&quot;</span>
+https://api.tradegecko.com/stock_adjustments/1
 </code></pre>
+<blockquote>
+<p>Response</p></p>
 
-<table><thead>
-<tr>
-<th>Action</th>
-<th>Description</th>
-</tr>
-</thead><tbody>
-<tr>
-<td><code>revert</code></td>
-<td>Revert the stock adjustment</td>
-</tr>
-</tbody></table></p>
+<p>Returns 204 status when the stock_adjustment gets deleted successfully.</p>
 
-  <h1 id='stockadjustmentlineitem'>StockAdjustmentLineItem</h1>
+<p></blockquote></p>
+
+<p>Permanently deletes a stock_adjustment. It cannot be undone.</p>
+
+<h3 id='http-request'>HTTP Request</h3>
+
+<p><code>DELETE https://api.tradegecko.com/stock_adjustments/{RESOURCE_ID}/</code></p>
+
+<p><h1 id='stockadjustmentlineitem'>StockAdjustmentLineItem</h1>
 <p>This is an object representing a stock_adjustment_line_item of a stock_adjustment. Stock_adjustments can
   have multiple stock_adjustment_line_items but a stock_adjustment_line_item object belongs to only one
   Stock_adjustment.</p>
+
 <h2 id='the-stockadjustmentlineitem-object'>The StockAdjustmentLineItem object</h2>
+
 <table><thead>
 <tr>
 <th>Attribute</th>
@@ -11382,10 +11384,10 @@ https://api.tradegecko.com/stock_adjustments/[:stock_adjustment_id]/actions/[:st
 <tr>
 <td><strong>price</strong></td>
 <td>String</td>
-<td></td>
+<td>Required only when quantity is greater than 0. For negative quantities, the current Moving Average Cost will be assigned automatically.</td>
 <td></td>
 </tr>
-</tbody></table>
+</tbody></table></p>
 
 <p><h2 id='list-all-stock_adjustment_line_items'>List all stock_adjustment_line_items</h2><pre class="highlight shell tab-shell"><code>curl -X GET -H <span class="s2">&quot;Content-type: application/json&quot;</span> -H <span class="s2">&quot;Authorization: Bearer &lt;ACCESS_TOKEN&gt;&quot;</span>
 https://api.tradegecko.com/stock_adjustment_line_items/
@@ -11540,7 +11542,7 @@ https://api.tradegecko.com/stock_adjustment_line_items/ -d <span class="s1">&#39
 <tr>
 <td><strong>price</strong></td>
 <td>String</td>
-<td></td>
+<td>Required only when quantity is greater than 0. For negative quantities, the current Moving Average Cost will be assigned automatically.</td>
 <td>true</td>
 </tr>
 </tbody></table>
@@ -11569,22 +11571,6 @@ https://api.tradegecko.com/stock_adjustment_line_items/1
 <h3 id='http-request'>HTTP Request</h3>
 
 <p><code>GET https://api.tradegecko.com/stock_adjustment_line_items/{RESOURCE_ID}</code></p></p>
-
-<p><h2 id='delete-a-stock_adjustment_line_item'>Delete a stock_adjustment_line_item</h2><pre class="highlight shell tab-shell"><code>curl -X DELETE -H <span class="s2">&quot;Content-type: application/json&quot;</span> -H <span class="s2">&quot;Authorization: Bearer &lt;ACCESS_TOKEN&gt;&quot;</span>
-https://api.tradegecko.com/stock_adjustment_line_items/1
-</code></pre>
-<blockquote>
-<p>Response</p></p>
-
-<p>Returns 204 status when the stock_adjustment_line_item gets deleted successfully.</p>
-
-<p></blockquote></p>
-
-<p>Permanently deletes a stock_adjustment_line_item. It cannot be undone. This stock_adjustment_line_item is no longer available for future Sales Orders.</p>
-
-<h3 id='http-request'>HTTP Request</h3>
-
-<p><code>DELETE https://api.tradegecko.com/stock_adjustment_line_items/{RESOURCE_ID}/</code></p>
 
 <p><h1 id='stocklevel'>StockLevel</h1>
 <p>This is an object representing a stock_level.</p>
@@ -12376,7 +12362,7 @@ https://api.tradegecko.com/stock_transfer_line_items/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a stock_transfer_line_item. It cannot be undone. This stock_transfer_line_item is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a stock_transfer_line_item. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -12666,7 +12652,8 @@ https://api.tradegecko.com/tax_types/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a tax_type. It cannot be undone. This tax_type is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a tax_type. It cannot be undone.
+  This tax_type will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -13042,7 +13029,8 @@ https://api.tradegecko.com/users/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a user. It cannot be undone. This user is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a user. It cannot be undone.
+  This user will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -13970,7 +13958,8 @@ https://api.tradegecko.com/variants/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a variant. It cannot be undone. This variant is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a variant. It cannot be undone.
+  This variant will no longer be available for future Sales Order.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
@@ -14297,7 +14286,7 @@ https://api.tradegecko.com/webhooks/1
 
 <p></blockquote></p>
 
-<p>Permanently deletes a webhook. It cannot be undone. This webhook is no longer available for future Sales Orders.</p>
+<p>Permanently deletes a webhook. It cannot be undone.</p>
 
 <h3 id='http-request'>HTTP Request</h3>
 
