--- a/guides/sales.html
+++ b/guides/sales.html
@@ -727,7 +727,7 @@ https://api.tradegecko.com/webhooks/ -d <span class="s1">&#39;{&quot;webhook&quo
 <div class="base__footer">
   <div class="corner-ribbon-bounds corner-ribbon-bounds--loose">
     <a class="corner-ribbon corner-ribbon--moko" target="_blank" href="https://www.tradegecko.com/jobs">
-      Were Hiring
+      We're Hiring
     </a>
   </div>
   <div class="footer-wrapper">
