--- a/guides/3pl.html
+++ b/guides/3pl.html
@@ -759,7 +759,7 @@ https://api.tradegecko.com/fulfillment_returns/ -d <span class="s1">'{"fulfillme
 <div class="base__footer">
   <div class="corner-ribbon-bounds corner-ribbon-bounds--loose">
     <a class="corner-ribbon corner-ribbon--moko" target="_blank" href="https://www.tradegecko.com/jobs">
-      Were Hiring
+      We're Hiring
     </a>
   </div>
   <div class="footer-wrapper">
