--- a/guides/warehouse.html
+++ b/guides/warehouse.html
@@ -463,7 +463,7 @@ https://api.tradegecko.com/purchase_orders/1/actions/receive
 <div class="base__footer">
   <div class="corner-ribbon-bounds corner-ribbon-bounds--loose">
     <a class="corner-ribbon corner-ribbon--moko" target="_blank" href="https://www.tradegecko.com/jobs">
-      Were Hiring
+      We're Hiring
     </a>
   </div>
   <div class="footer-wrapper">
