publish: Merge pull request #74 from tradegecko/feature/deprecate_tax_rate
generated from commit 445f887f8a0d64622e59b5999da1c1291e041bd2

--- a/docs.html
+++ b/docs.html
@@ -8189,7 +8189,7 @@ This endpoint also accepts embedded order_line_items.</p>
 <td></td>
 </tr>
 <tr>
-<td><strong>tax_rate</strong></td>
+<td><strong>tax_rate</strong> <span class='deprecated'>deprecated</span></td>
 <td>String</td>
 <td></td>
 <td></td>
@@ -8474,7 +8474,7 @@ https://api.tradegecko.com/orders/1
 <td></td>
 </tr>
 <tr>
-<td><strong>tax_rate</strong></td>
+<td><strong>tax_rate</strong>  <span class='deprecated'>deprecated</span></td>
 <td>String</td>
 <td></td>
 <td></td>
@@ -8525,7 +8525,6 @@ https://api.tradegecko.com/order_line_items/
     </span><span class="s2">&quot;price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;189.0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;quantity&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;1.0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;tax_rate_override&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
-    </span><span class="s2">&quot;tax_rate&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;fulfillment_line_item_ids&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w"></p>
 
 <p></span><span class="p">],</span><span class="w">
@@ -8552,7 +8551,6 @@ https://api.tradegecko.com/order_line_items/
     </span><span class="s2">&quot;price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;189.0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;quantity&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;1.0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;tax_rate_override&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
-    </span><span class="s2">&quot;tax_rate&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;fulfillment_line_item_ids&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w"></p>
 
 <p></span><span class="p">],</span><span class="w">
@@ -8651,7 +8649,6 @@ https://api.tradegecko.com/order_line_items/ -d <span class="s1">&#39;{&quot;ord
   </span><span class="s2">&quot;price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;189.0&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;quantity&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;1.0&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;tax_rate_override&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
-  </span><span class="s2">&quot;tax_rate&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;fulfillment_line_item_ids&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w"></p>
 
 <p></span><span class="p">],</span><span class="w">
@@ -8749,7 +8746,7 @@ https://api.tradegecko.com/order_line_items/ -d <span class="s1">&#39;{&quot;ord
 <td></td>
 </tr>
 <tr>
-<td><strong>tax_rate</strong></td>
+<td><strong>tax_rate</strong> <span class='deprecated'>deprecated</span></td>
 <td>String</td>
 <td></td>
 <td></td>
@@ -8784,7 +8781,6 @@ https://api.tradegecko.com/order_line_items/1
   </span><span class="s2">&quot;price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;189.0&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;quantity&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;1.0&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;tax_rate_override&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
-  </span><span class="s2">&quot;tax_rate&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;nil&quot;</span><span class="p">,</span><span class="w">
   </span><span class="s2">&quot;fulfillment_line_item_ids&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w"></p>
 
 <p></span><span class="p">],</span><span class="w">
